--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="grid-container"></div>
+  <div class="grid-container" id="grid-container">
+
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
