--- a/index.html
+++ b/index.html
@@ -3,13 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sketchpad</title>
+  <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
+  <title>Sketchpad</title>
 </head>
 <body>
-  <div class="grid-container" id="grid-container">
+    <div class="flex-container">
+        <div class="title"><h1>Sketchpad</h1></div>
+        <div class="mode">Mode: Coloring</div>
+        <div class="content">
+          <div class="board"></div>
+          <div class="buttons">
+            <button class="blackButton" onclick="changeColor('black')">Black</button>
+            <button class="grayButton" onclick="changeColor('gray')">Gray</button>
+            <button class="eraserButton" onclick="changeColor('white')">Eraser</button>
+            <button class="randomButton" onclick="changeColor('random')">Random</button>
+            <button class="resetButton" onclick="resetBoard()">Reset</button>
+          </div>
+          <div>
+            <input 
+            class="input"
+            type="text" 
+            placeholder="Size of Board" 
+            value="16" 
+            onchange="changeSize(this.value)">
+            <button class="setButton">Set Size</button>
+            <span class="focus-bg"></span>
+          </div>
+          <div class="error">
+            Input must be between 2 and 100!
+          </div>
+        </div>
+    </div>
 
-  </div>
-  <script src="script.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
